--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1825,6 +1825,19 @@
   url       = {https://www.peterlang.com/view/title/15356},
 }
 
+@InProceedings{Bagavathi2018,
+  author    = {Bagavathi, A. and Krishnan, S.},
+  title     = {Multi-Net: A Scalable Multiplex Network Embedding Framework},
+  booktitle = {7th International Conference on Complex Networks and Their Applications},
+  year      = {2018},
+  volume    = {813},
+  series    = {Studies in Computational Intelligence},
+  pages     = {119-131},
+  doi       = {10.1007/978-3-030-05414-4_10},
+  owner     = {Vincent},
+  timestamp = {2018.12.07},
+}
+
 @Article{Bagrow2008a,
   author    = {Bagrow, J. P. and Bollt, E. M. and Skufca, J. D. and ben-Avraham, D.},
   title     = {Portraits of complex networks},
@@ -4218,6 +4231,17 @@
   url          = {http://mboudour.github.io/2016/04/17/Arthur-Conan-Doyle's-A-Study-in-Scarlet-Network-&-Trajectories.html},
   owner        = {Vincent},
   timestamp    = {2016.04.20},
+}
+
+@InProceedings{Bougiatiotis2016,
+  author    = {Bougiatiotis, K. and Giannakopoulos, T.},
+  title     = {Content Representation and Similarity of Movies based on Topic Extraction from Subtitles},
+  booktitle = {9th Hellenic Conference on Artificial Intelligence},
+  year      = {2016},
+  pages     = {1-7},
+  doi       = {10.1145/2903220.2903235},
+  owner     = {Vincent},
+  timestamp = {2021.01.21},
 }
 
 @Article{Bounegru2016,
@@ -7263,6 +7287,18 @@
   url       = {https://www.jstor.org/stable/2985181},
 }
 
+@Article{Cozzo2013,
+  author    = {Cozzo, E. and Kivelä, M. and de Domenico, M. and Solé, A. and Arenas, A. and Gómez, S. and Porter, M. A. and Moreno, Y.},
+  title     = {Structure of Triadic Relations in Multiplex Networks},
+  journal   = {New Journal of Physics},
+  year      = {2015},
+  volume    = {17},
+  pages     = {073029},
+  doi       = {10.1088/1367-2630/17/7/073029},
+  owner     = {Vincent},
+  timestamp = {2013.07.30},
+}
+
 @Article{Crane2006,
   author    = {Crane, G.},
   title     = {What Do You Do with a Million Books?},
@@ -7999,6 +8035,16 @@
   doi       = {10.1145/2851581.2892551},
   owner     = {Vincent},
   timestamp = {2020.10.30},
+}
+
+@InProceedings{Deldjoo2019,
+  author    = {Deldjoo, Y. and Schedl, M. and Elahi, M.},
+  title     = {Movie Genome Recommender: A Novel Recommender System Based on Multimedia Content},
+  booktitle = {International Conference on Content-Based Multimedia Indexing},
+  year      = {2019},
+  doi       = {10.1109/cbmi.2019.8877452},
+  owner     = {Vincent},
+  timestamp = {2021.01.21},
 }
 
 @InProceedings{Deleris2018,
@@ -12596,6 +12642,19 @@
   doi       = {10.1016/j.knosys.2019.06.024},
   owner     = {Vincent},
   timestamp = {2020.07.19},
+}
+
+@Article{Grabska-Gradzinska2012,
+  author    = {Grabska-Gradzinska, I. and Kulig, A. and Kwapien, J. and Drozdz, S.},
+  title     = {Complex network analysis of literary and scientific texts},
+  journal   = {International Journal of Modern Physics C},
+  year      = {2012},
+  volume    = {23},
+  number    = {7},
+  pages     = {1250051},
+  doi       = {10.1142/S0129183112500519},
+  owner     = {Vincent},
+  timestamp = {2012.05.28},
 }
 
 @Article{Grady2001,
@@ -17540,6 +17599,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.07.09},
 }
 
+@Article{Kovacs2019,
+  author    = {Kovacs, B. and Kleinbaum, A. M.},
+  title     = {Language-Style Similarity and Social Networks},
+  journal   = {Psychological Science},
+  year      = {2019},
+  volume    = {31},
+  number    = {2},
+  pages     = {202-213},
+  doi       = {10.1177/0956797619894557},
+  owner     = {Vincent},
+  timestamp = {2021.01.21},
+}
+
 @Book{Kozloff2000,
   title     = {Overhearing Film Dialogue},
   publisher = {University of California Press},
@@ -18372,6 +18444,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-540-78246-9_31},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@InProceedings{Lasfar2000,
+  author    = {Lasfar, A. and Mouline, S. and Aboutajdine, D. and Cherifi, H.},
+  title     = {Content-based retrieval in fractal coded image databases},
+  booktitle = {15th International Conference on Pattern Recognition},
+  year      = {2000},
+  pages     = {1031-1034},
+  doi       = {10.1109/icpr.2000.905647},
+  owner     = {Vincent},
+  timestamp = {2021.01.21},
 }
 
 @Article{Latapy2008a,
@@ -27298,6 +27381,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2012.08.19},
 }
 
+@InProceedings{Reddy2018,
+  author    = {Reddy, S. R. S. and Nalluri, Sravani and Kunisetti, Subramanyam and Ashok, S. and Venkatesh, B.},
+  title     = {Content-Based Movie Recommendation System Using Genre Correlation},
+  booktitle = {2nd International Conference on Smart Computing and Informatics},
+  year      = {2018},
+  volume    = {105},
+  series    = {Smart Innovation, Systems and Technologies},
+  pages     = {391-397},
+  publisher = {Springer},
+  doi       = {10.1007/978-981-13-1927-3_42},
+  owner     = {Vincent},
+  timestamp = {2021.01.21},
+}
+
 @InProceedings{Redeker2006,
   author    = {Redeker, G. and Egg, M.},
   title     = {Says who? on the treatment of speech attributions in discourse structure},
@@ -30278,6 +30375,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {dialog-21.ru/media/3947/skorinkinda.pdf},
 }
 
+@InProceedings{Skrlj2019b,
+  author    = {Škrlj, B. and Renoust, B.},
+  title     = {Patterns of Multiplex Layer Entanglement Across Real and Synthetic Networks},
+  booktitle = {International Conference on Complex Networks and Their Applications},
+  year      = {2019},
+  volume    = {882},
+  series    = {Studies in Computational Intelligence},
+  pages     = {671-683},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-030-36683-4_54},
+  owner     = {Vincent},
+  timestamp = {2021.01.21},
+}
+
 @InProceedings{Smeaton2006,
   author    = {Smeaton, A. F. and Lehane, B. and O'Connor, N. E. and Brady, C. and Craig, G.},
   title     = {Automatically selecting shots for action movie trailers},
@@ -31830,6 +31941,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.patrec.2016.01.002},
   owner     = {Vincent},
   timestamp = {2019.07.03},
+}
+
+@Article{Tantardini2019,
+  author    = {Tantardini, M. and Ieva, F. and Tajoli, L. and Piccardi, C.},
+  title     = {Comparing methods for comparing networks},
+  journal   = {Scientific Reports},
+  year      = {2019},
+  volume    = {9},
+  pages     = {17557},
+  doi       = {10.1038/s41598-019-53708-y},
+  groups    = {Network Comparison},
+  owner     = {Vincent},
+  timestamp = {2021.01.21},
 }
 
 @InProceedings{Tapaswi2012,
@@ -36333,6 +36457,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1140/epjb/e2009-00335-8},
   owner     = {Vincent},
   timestamp = {2016.09.27},
+}
+
+@InProceedings{Zhou2010,
+  author    = {Zhou, H. and Hermans, T. and Karandikar, A. V. and Rehg, J. M.},
+  title     = {Movie genre classification via scene categorization},
+  booktitle = {International Conference on Multimedia},
+  year      = {2010},
+  pages     = {747-750},
+  doi       = {10.1145/1873951.1874068},
+  owner     = {Vincent},
+  timestamp = {2021.01.21},
 }
 
 @Article{Zhou2015,
