--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1838,6 +1838,19 @@
   timestamp = {2018.12.07},
 }
 
+@InCollection{Baghiu2019,
+  author    = {Baghiu, Ș. and Pojoga, V.},
+  title     = {Ruralism and Literature in Romania: An Introduction},
+  booktitle = {Ruralism and Literature in Romania},
+  publisher = {Peter Lang},
+  year      = {2019},
+  editor    = {Baghiu, Ș. and Pojoga, V. and Sass, M.},
+  pages     = {13-20},
+  owner     = {Vincent},
+  timestamp = {2021.01.22},
+  url       = {https://www.peterlang.com/view/title/72809},
+}
+
 @Article{Bagrow2008a,
   author    = {Bagrow, J. P. and Bollt, E. M. and Skufca, J. D. and ben-Avraham, D.},
   title     = {Portraits of complex networks},
@@ -4088,6 +4101,19 @@
   owner     = {Vincent},
   publisher = {Frontiers Media {SA}},
   timestamp = {2017.12.06},
+}
+
+@InCollection{Borza2019,
+  author    = {Borza, C.},
+  title     = {How to Populate a Country. A Quantitative Analysis of the Rural Novel from Romania (1900-2000)},
+  booktitle = {Ruralism and Literature in Romania},
+  publisher = {Peter Lang},
+  year      = {2019},
+  editor    = {Baghiu, Ș. and Pojoga, V. and Sass, M.},
+  pages     = {21-39},
+  owner     = {Vincent},
+  timestamp = {2021.01.22},
+  url       = {https://www.peterlang.com/view/title/72809},
 }
 
 @Article{Bosch2008,
@@ -11732,6 +11758,18 @@
   doi       = {10.1109/tcsvt.2015.2504738},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@Article{Gardan2018,
+  author    = {Gârdan, D.},
+  title     = {The Great Female Unread. Romanian Women Novelists in the First Half of the Twentieth Century: a Quantitative Approach},
+  journal   = {Metacritic Journal for Comparative Studies and Theory},
+  year      = {2018},
+  volume    = {4},
+  number    = {1},
+  doi       = {10.24193/mjcst.2018.5.07},
+  owner     = {Vincent},
+  timestamp = {2021.01.22},
 }
 
 @InProceedings{Garg2008,
@@ -22892,6 +22930,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.aclweb.org/anthology/L16-1555},
 }
 
+@Article{Modoc2020,
+  author    = {Modoc, E. and Gârdan, D.},
+  title     = {Style at the Scale of the Canon. A Stylometric Analysis of 100 Romanian Novels Published between 1920 and 1940},
+  journal   = {Metacritic Journal for Comparative Studies and Theory},
+  year      = {2020},
+  volume    = {6},
+  number    = {2},
+  pages     = {48-63:},
+  doi       = {10.24193/mjcst.2020.10.03},
+  owner     = {Vincent},
+  timestamp = {2021.01.22},
+}
+
 @InProceedings{Mohammad2011,
   author    = {Mohammad, S.},
   title     = {From once upon a time to happily ever after: tracking emotions in novels and fairy tales},
@@ -24019,6 +24070,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1073/pnas.36.1.48},
   owner     = {Vincent},
   timestamp = {2019.03.30},
+}
+
+@InCollection{Neagu2021,
+  author    = {Neagu, L.-M.},
+  title     = {A Quantitative Analysis of Romanian Writers' Demography Based on the General Dictionary of Romanian Literature},
+  booktitle = {Ludic, Co-design and Tools Supporting Smart Learning Ecosystems and Smart Education},
+  publisher = {Springer},
+  year      = {2021},
+  volume    = {197},
+  series    = {Smart Innovation, Systems and Technologies},
+  pages     = {253-261},
+  doi       = {10.1007/978-981-15-7383-5_22},
+  owner     = {Vincent},
+  timestamp = {2021.01.22},
 }
 
 @InProceedings{Nefian1999,
@@ -25738,6 +25803,42 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://trove.nla.gov.au/work/13538000?q&sort=holdings+desc&_=1555687627395&versionId=26333990},
 }
 
+@Article{Parvulescu2020,
+  author    = {Parvulescu, A. and Boatcă, M.},
+  title     = {(Dis)Counting Languages: Between Hugó Meltzl and Liviu Rebreanu},
+  journal   = {Journal of World Literature},
+  year      = {2020},
+  volume    = {5},
+  number    = {1},
+  pages     = {47-78},
+  doi       = {10.1163/24056480-00403300},
+  owner     = {Vincent},
+  timestamp = {2021.01.22},
+}
+
+@Article{Parvulescu2020a,
+  author    = {Parvulescu, A. and Boatcă, M.},
+  title     = {The longue durée of enslavement: Extracting labor from Romani music in Liviu Rebreanu's Ion},
+  journal   = {Literature Compass},
+  year      = {2020},
+  volume    = {17},
+  number    = {1-2},
+  doi       = {10.1111/lic3.12559},
+  owner     = {Vincent},
+  timestamp = {2021.01.22},
+}
+
+@Article{Parvulescu2020b,
+  author    = {Parvulescu, A. and Boatcă, M.},
+  title     = {The Inter-Imperial Dowry Plot},
+  journal   = {Interventions},
+  year      = {2020},
+  pages     = {1-26},
+  doi       = {10.1080/1369801x.2020.1762693},
+  owner     = {Vincent},
+  timestamp = {2021.01.22},
+}
+
 @InProceedings{Pascal2008,
   author    = {Pascal, D. and Baldridge, J.},
   title     = {Specialized models and ranking for coreference resolution},
@@ -26446,6 +26547,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   groups    = {Visualisation},
   owner     = {Vincent},
   timestamp = {2019.06.24},
+}
+
+@Article{Pojoga2019,
+  author    = {Pojoga, V.},
+  title     = {The Change of Medium and the Medium that Changes Narrative Literature, Networks, and the Digital},
+  journal   = {Transylvanian Review},
+  year      = {2019},
+  volume    = {28},
+  number    = {Supplement 1},
+  pages     = {203-215},
+  owner     = {Vincent},
+  timestamp = {2021.01.22},
+  url       = {https://www.ceeol.com/search/article-detail?id=855295},
 }
 
 @Article{Pojoga2020,
@@ -28819,6 +28933,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1515/sem.2007.030},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@InCollection{Ryan2014,
+  author    = {Ryan, M.-L.},
+  title     = {Story/Worlds/Media: Tuning the Instruments of a Media-Conscious Narratology},
+  booktitle = {Storyworlds Across Media: Toward a Media-Conscious Narratology},
+  publisher = {University of Nebraska Press},
+  year      = {2014},
+  editor    = {Ryan, M.-L. and Thon, J.-N.},
+  pages     = {25-49},
+  owner     = {Vincent},
+  timestamp = {2021.01.22},
+  url       = {https://digitalcommons.unl.edu/cgi/viewcontent.cgi?article=1273},
 }
 
 @Electronic{Ryan2017,
@@ -32207,6 +32334,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.01},
 }
 
+@Article{Terian2019,
+  author    = {Terian, A.},
+  title     = {Big Numbers: A Quantitative Analysis of the Development of the Novel in Romania},
+  journal   = {Transylvanian Review},
+  year      = {2019},
+  volume    = {28},
+  number    = {Supplement 1},
+  pages     = {55-71},
+  owner     = {Vincent},
+  timestamp = {2021.01.22},
+  url       = {https://www.ceeol.com/search/article-detail?id=855275},
+}
+
+@InCollection{Terian2019a,
+  author    = {Terian, A.},
+  title     = {Liviu Rebreanu. Zoopoetics in a Rural Environment},
+  booktitle = {Ruralism and Literature in Romania},
+  publisher = {Peter Lang},
+  year      = {2019},
+  editor    = {Baghiu, Ș. and Pojoga, V. and Sass, M.},
+  pages     = {41-56},
+  owner     = {Vincent},
+  timestamp = {2021.01.22},
+  url       = {https://www.peterlang.com/view/title/72809},
+}
+
 @Article{Thelwall2016,
   author    = {Thelwall, M. and Kousha, K.},
   title     = {Goodreads: A social network site for book readers},
@@ -32528,6 +32681,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.12},
   url       = {https://www.eerdmans.com/Products/7392/character-studies-in-the-fourth-gospel.aspx},
+}
+
+@InProceedings{Toma2020,
+  author    = {Toma, I.},
+  title     = {Emerging Patterns in Romanian Literature and Interactive Visualizations based on the General Dictionary of Romanian Literature},
+  booktitle = {International Conference on Human-Computer Interaction},
+  year      = {2020},
+  pages     = {91-103},
+  owner     = {Vincent},
+  timestamp = {2021.01.22},
+  url       = {https://www.bloomsbury.com/us/romanian-literature-as-world-literature-9781501327933/},
 }
 
 @Article{Tomasi2016,
@@ -33193,6 +33357,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.socnet.2010.03.003},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+}
+
+@InCollection{Valer2019,
+  author    = {Valer, S. C.},
+  title     = {Inventing the Romanian Peasant in Transylvania during the Nineteenth Century},
+  booktitle = {Ruralism and Literature in Romania},
+  publisher = {Peter Lang},
+  year      = {2019},
+  editor    = {Baghiu, Ș. and Pojoga, V. and Sass, M.},
+  pages     = {165-191},
+  owner     = {Vincent},
+  timestamp = {2021.01.22},
+  url       = {https://www.peterlang.com/view/title/72809},
 }
 
 @InProceedings{Valls-Vargas2013,
