--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -258,6 +258,18 @@
   url       = {https://books.google.fr/books/about/Shakespeare_s_Violated_Bodies.html?id=NevbglOeUgsC},
 }
 
+@Article{Agaev2005,
+  author    = {Agaev, R. and Chebotarev, P.},
+  title     = {On the spectra of nonsymmetric Laplacian matrices},
+  journal   = {Linear Algebra and its Applications},
+  year      = {2005},
+  volume    = {399},
+  pages     = {157-168},
+  doi       = {10.1016/j.laa.2004.09.003},
+  owner     = {Vincent},
+  timestamp = {2021.02.04},
+}
+
 @InProceedings{Agarwal2009,
   author    = {Agarwal, A. and Biadsy, F. and McKeown, K. R.},
   title     = {Contextual Phrase-Level Polarity Analysis Using Lexical Affect Scoring and Syntactic N-Grams},
@@ -1358,6 +1370,18 @@
   doi       = {10.3115/981658.981675},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Aparicio2015,
+  author    = {Aparício, D. and Ribeiro, P. and Silva, F.},
+  title     = {Network comparison using directed graphlets},
+  journal   = {arXiv},
+  year      = {2015},
+  volume    = {cs.SI},
+  pages     = {1511.01964},
+  owner     = {Vincent},
+  timestamp = {2015.11.09},
+  url       = {http://arxiv.org/abs/1511.01964},
 }
 
 @InProceedings{Arai2010,
@@ -2583,6 +2607,19 @@
   timestamp = {2020.12.12},
 }
 
+@Article{Bauer2012,
+  author    = {Bauer, F.},
+  title     = {Normalized graph Laplacians for directed graphs},
+  journal   = {Linear Algebra and its Applications},
+  year      = {2012},
+  volume    = {436},
+  number    = {11},
+  pages     = {4193-4222},
+  doi       = {10.1016/j.laa.2012.01.020},
+  owner     = {Vincent},
+  timestamp = {2021.02.04},
+}
+
 @Article{Bauke2007,
   author    = {Bauke, H.},
   title     = {Parameter estimation for power-law distributions by maximum likelihood methods},
@@ -3206,6 +3243,17 @@
   doi       = {10.5120/18405-9674},
   owner     = {Vincent},
   timestamp = {2020.08.13},
+}
+
+@InProceedings{Bi2018,
+  author    = {Bi, Y. and Guo, P. and Guo, P. and Wang, X.},
+  title     = {Comparative Analysis of Writing Styles in the Story of the Stone based on Character Networks},
+  booktitle = {37th Chinese Control Conference},
+  year      = {2018},
+  pages     = {9679-9685},
+  doi       = {10.23919/chicc.2018.8483089},
+  owner     = {Vincent},
+  timestamp = {2021.02.03},
 }
 
 @Article{Bianconi2008,
@@ -5140,6 +5188,18 @@
   url       = {http://www.digitalhumanities.org/companion/view?docId=blackwell/9781405103213/9781405103213.xml&chunk.id=ss1-4-4},
 }
 
+@Article{Burstein2017,
+  author    = {Burstein, D.},
+  title     = {Asymptotics of the spectral radius for directed Chung-Lu random graphs with community structure},
+  journal   = {arXiv},
+  year      = {2017},
+  volume    = {math.CO},
+  pages     = {1705.10893},
+  owner     = {Vincent},
+  timestamp = {2021.02.04},
+  url       = {https://arxiv.org/abs/1705.10893},
+}
+
 @Book{Burt1982,
   title     = {Toward a Structural Theory of Action: Network Models of Social Structure, Perception, and Action},
   publisher = {Academic Press},
@@ -6216,6 +6276,17 @@
   url       = {http://www.aclweb.org/anthology/K/K17/K17-1023.pdf},
 }
 
+@TechReport{Chen2017v,
+  author      = {Chen , A.},
+  title       = {Modeling Movie Character Networks with Random Graphs},
+  institution = {Stanford University},
+  year        = {2017},
+  type        = {Class Assignment},
+  owner       = {Vincent},
+  timestamp   = {2021.02.03},
+  url         = {http://snap.stanford.edu/class/cs224w-2017/projects/cs224w-32-final.pdf},
+}
+
 @InCollection{Chen2018,
   author    = {Chen, Z. and Liu, B.},
   title     = {Open-world Learning},
@@ -6580,6 +6651,19 @@
   owner     = {Vincent},
   timestamp = {2010.09.13},
   url       = {http://www.citeulike.org/user/jung_dalglish/article/352523},
+}
+
+@Article{Chung2006,
+  author    = {Chung, Fan},
+  title     = {The Diameter and Laplacian Eigenvalues of Directed Graphs},
+  journal   = {Electronic Journal of Combinatorics},
+  year      = {2006},
+  volume    = {13},
+  number    = {1},
+  pages     = {N4},
+  doi       = {10.37236/1142},
+  owner     = {Vincent},
+  timestamp = {2021.02.04},
 }
 
 @Article{Chyrun2016,
@@ -9248,6 +9332,17 @@
   doi       = {10.1109/ICDAR.2017.286},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@InProceedings{Durak2013,
+  author    = {Durak, N. and Kolda, T. G. and Pinar, A. and Seshadhri, C.},
+  title     = {A scalable null model for directed graphs matching all degree distributions: In, out, and reciprocal},
+  booktitle = {2nd IEEE Network Science Workshop},
+  year      = {2013},
+  pages     = {23-30},
+  doi       = {10.1109/nsw.2013.6609190},
+  owner     = {Vincent},
+  timestamp = {2021.02.04},
 }
 
 @InProceedings{Durrett2013,
@@ -19331,6 +19426,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2015.07.05},
 }
 
+@MastersThesis{Lesser2014,
+  author      = {Lesser, Josh},
+  title       = {Get yourself connected: time, space, and character networks in David Mitchell's fiction},
+  year        = {2014},
+  type        = {M. Arts Thesis},
+  institution = {DePaul University, College of Liberal Arts \& Social Sciences},
+  owner       = {Vincent},
+  timestamp   = {2021.02.03},
+  url         = {https://via.library.depaul.edu/etd/173/},
+}
+
 @Book{Lessing1984,
   title     = {Laocoön: An Essay on the Limits of Painting and Poetry},
   publisher = {Johns Hopkins University Press},
@@ -28686,6 +28792,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.08.03},
 }
 
+@Article{Rth2012,
+  author    = {Ráth, B. and Szakács , L.},
+  title     = {Multigraph limit of the dense configuration model and the preferential attachment graph},
+  journal   = {Acta Mathematica Hungarica},
+  year      = {2012},
+  volume    = {136},
+  number    = {3},
+  pages     = {196-221},
+  doi       = {10.1007/s10474-012-0217-4},
+  owner     = {Vincent},
+  timestamp = {2021.02.04},
+}
+
 @InProceedings{Ruan2016,
   author    = {Ruan, T. and Wang, M. and Sun, J. and Wang, T. and Zeng, L. and Yin, Y. and Gao, J.},
   title     = {An automatic approach for constructing a knowledge base of symptoms in Chinese},
@@ -29964,6 +30083,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.08},
   url       = {https://www.jstor.org/stable/24305538},
+}
+
+@Article{Shafie2015,
+  author    = {Shafie, T.},
+  title     = {A multigraph approach to social network analysis},
+  journal   = {Journal of Social Structure},
+  year      = {2015},
+  volume    = {16},
+  pages     = {1-22},
+  owner     = {Vincent},
+  timestamp = {2021.02.04},
+  url       = {https://www.cmu.edu/joss/content/articles/volume16/Shafie.pdf},
 }
 
 @InProceedings{Shah2015,
