--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -6265,6 +6265,19 @@
   url       = {http://www.aclweb.org/anthology/W16-3612},
 }
 
+@Article{Chen2016k,
+  author    = {Chen, B. and Wang, Y.},
+  title     = {Character interaction network analysis of chinese literary work- A preliminary study},
+  journal   = {Proceedings of the Association for Information Science and Technology},
+  year      = {2016},
+  volume    = {53},
+  number    = {1},
+  pages     = {1-4},
+  doi       = {10.1002/pra2.2016.14505301088},
+  owner     = {Vincent},
+  timestamp = {2021.02.04},
+}
+
 @InProceedings{Chen2017t,
   author    = {Chen, H. Y. and Zhou, E. and Choi, J. D.},
   title     = {Robust Coreference Resolution and Entity Linking on Dialogues: Character Identification on TV Show Transcripts},
@@ -9645,6 +9658,19 @@
   timestamp = {2020.08.13},
 }
 
+@Article{Eidsaa2013,
+  author    = {Eidsaa, M. and Almaas, E.},
+  title     = {s-core network decomposition: A generalization ofk-core analysis to weighted networks},
+  journal   = {Physical Review E},
+  year      = {2013},
+  volume    = {88},
+  number    = {6},
+  pages     = {062819},
+  doi       = {10.1103/physreve.88.062819},
+  owner     = {Vincent},
+  timestamp = {2021.02.04},
+}
+
 @InProceedings{Eisenberg2017,
   author    = {Eisenberg, J. and Finlayson, M.},
   title     = {A Simpler and More Generalizable Story Detector using Verb and Character Features},
@@ -11853,6 +11879,19 @@
   doi       = {10.1109/tcsvt.2015.2504738},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@Article{Garas2012,
+  author    = {Garas, A. and Schweitzer, F. and Havlin, S.},
+  title     = {A k-shell decomposition method for weighted networks},
+  journal   = {New Journal of Physics},
+  year      = {2012},
+  volume    = {14},
+  pages     = {083030},
+  doi       = {10.1088/1367-2630/14/8/083030},
+  owner     = {Vincent},
+  review    = {arXiv: http://arxiv.org/abs/1205.3720},
+  timestamp = {2012.05.23},
 }
 
 @Article{Gardan2018,
@@ -28343,6 +28382,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@InCollection{Rizvic2015,
+  author    = {Rizvić, H. and Martinčić-Ipšić, S. and Meštrović, A.},
+  title     = {Network Motifs Analysis of Croatian Literature},
+  booktitle = {Social sciences via network analysis and computation},
+  publisher = {Peter Lang},
+  year      = {2015},
+  chapter   = {3},
+  doi       = {10.3726/978-3-653-05820-8_03},
+  owner     = {Vincent},
+  review    = {arXiv: https://arxiv.org/abs/1411.4960},
+  timestamp = {2021.02.04},
+}
+
 @InProceedings{Roberts2008,
   author    = {Roberts, A. and Gaizauskas, R. and Hepple, M.},
   title     = {Extracting clinical relationships from patient narratives},
@@ -36386,6 +36438,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/ccbd.2014.34},
   owner     = {Vincent},
   timestamp = {2019.03.30},
+}
+
+@InProceedings{Zeng2016,
+  author    = {Zeng, M. and Wang, E. and Yang, Z. and Meng, Q. and Sun, B. and Wang, J.},
+  title     = {Superfamilies of networks for analyzing the correlations of different flow fields},
+  booktitle = {12th World Congress on Intelligent Control and Automation},
+  year      = {2016},
+  pages     = {2626-2631},
+  doi       = {10.1109/wcica.2016.7578756},
+  owner     = {Vincent},
+  timestamp = {2021.02.04},
 }
 
 @InProceedings{Zeng2019b,
